# trae_csdn_writer

./: .gitignore  README.md  analyze_comparison.py  pyproject.toml  quality_output.txt
.trae/skills/csdn-writer/: SKILL.md
config/: project_config.json
docs/: AI_INSTRUCTIONS.md  SCRAPER_GUIDE.md
fewshot_samples/: FEWSHOT_README.md
fewshot_samples/sample_01/: input.md  metadata.json
fewshot_samples/sample_02/: input.md  metadata.json  output.md
input/processed/: n8n_deepseek_cpolar_analyzed.md  pyd_packer_analyzed.md  python_iterator_generator_analyzed.md
input/raw/: n8n_deepseek_cpolar_original.md  python_iterator_generator_original.md  python_iterator_original_clean.md  python_iterator_original_full.md  sample_original_text.txt  url_registry.md
output/articles/: n8n_deepseek_cpolar.md  python_iterator_generator_rewritten.md  sample_pyd_packer.md
output/reports/: final_validation.txt  n8n_deepseek_cpolar_report.txt  python_iterator_generator_report.txt  sample_quality_report.txt  validation_test.txt
scripts/: csdn_scraper.py  csdn_validator.py  test_quality.py
templates/: csdn_article_template.md
