[project]
name = "csdn-writer"
version = "1.3.0"
description = "CSDN AI 写作助手 - 专用于CSDN文章自动生成与改写"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "APIceChen", email = "apicechen@example.com"}
]
keywords = ["csdn", "ai-writing", "article-rewriting", "web-scraping"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # 核心依赖 - Web 抓取
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.1.0",
    
    # 浏览器自动化 (可选，用于复杂页面)
    "playwright>=1.40.0",
    
    # 数据处理
    "markdownify>=0.13.0",
    "prettytable>=3.9.0",
]

[project.optional-dependencies]
dev = [
    # 开发工具
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.1.0",
]

[project.scripts]
csdn-scraper = "scripts.csdn_scraper:main"
csdn-validator = "scripts.csdn_validator:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
# uv 配置
dev-dependencies = [
    "pytest>=7.4.0",
    "black>=23.0.0",
]

[tool.black]
line-length = 100
target-version = ['py39', 'py310', 'py11', 'py312']

[tool.isort]
profile = "black"
line_length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
